k8s/pg-admin-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pgadmin
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pgadmin
  template:
    metadata:
      labels:
        app: pgadmin
    spec:
      containers:
        - name: pgadmin
          image: dpage/pgadmin4
          ports:
            - containerPort: 80
          volumeMounts:
            - mountPath: /var/tmp/pgadmin
              name: pgadmindb
      volumes:
        - name: pgadmindb
          persistentVolumeClaim:
            claimName: pgadmin-pv-claim
