k8s/article-mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: article-mongo-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: article-mongo
  template:
    metadata:
      labels:
        app: article-mongo
    spec:
      containers:
        - name: article-mongo
          image: amerkul/article-mongo:tagname
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: article-mongo-service
spec:
  selector:
    app: article-mongo
  type: NodePort
  ports:
    - port: 8180
      targetPort: 8080
      nodePort: 30111
