k8s/article-postgres-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: article-postgres-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: article-postgres
  template:
    metadata:
      labels:
        app: article-postgres
    spec:
      containers:
        - name: article-postgres
          image: amerkul/article-postgres:tagname
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: article-service
spec:
  selector:
    app: article-postgres
  type: NodePort
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30003
