k8s/config-deployment.yml
apiVersion: v1
kind: Service
metadata:
  name: config-service
spec:
  selector:
    app: config
  type: ClusterIP
  ports:
    - name: config-ports
      port: 8071
      targetPort: 8071
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: config-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: config
  template:
    metadata:
      labels:
        app: config
    spec:
      containers:
        - name: config
          image: amerkul/config:tagname
          ports:
            - containerPort: 8071
