k8s/mongo-express-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-express-service
spec:
  selector:
    app: mongo-express
  type: NodePort
  ports:
    - name: mongo-express-listener
      port: 8081
      targetPort: 8081
      nodePort: 30001
