k8s/mongo-service.yml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
spec:
  selector:
    app: mongo
  type: NodePort
  ports:
    - name: mongo-listener
      port: 27017
      targetPort: 27017
      nodePort: 30000
