k8s/pg-admin-service.yml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin-service
spec:
  ports:
    - name: app-listener
      port: 5050
      targetPort: 80
      nodePort: 30200
  selector:
    app: pgadmin
  type: NodePort
