k8s/zookeeper.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: zookeeper-service
  name: zookeeper-cluster
spec:
  type: NodePort
  ports:
    - name: zookeeper-port
      port: 2181
      nodePort: 30181
      targetPort: 2181
  selector:
    app: zookeeper
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zookeeper
  name: zookeeper
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zookeeper
  template:
    metadata:
      labels:
        app: zookeeper
    spec:
      containers:
        - image: wurstmeister/zookeeper
          imagePullPolicy: IfNotPresent
          name: zookeeper
          ports:
            - containerPort: 2181
#apiVersion: kafka.strimzi.io/v1beta2
#kind: Kafka
#metadata:
#  name: kafka-service
#spec:
#  kafka:
#    version: 3.3.1
#    replicas: 1
#    listeners:
#      - name: plain
#        port: 9092
#        type: internal
#        tls: false
#      - name: tls
#        port: 9093
#        type: internal
#        tls: true
#    config:
#      offsets.topic.replication.factor: 1
#      transaction.state.log.replication.factor: 1
#      transaction.state.log.min.isr: 1
#      default.replication.factor: 1
#      min.insync.replicas: 1
#      inter.broker.protocol.version: "3.3"
#    storage:
#      type: jbod
#      volumes:
#        - id: 0
#          type: persistent-claim
#          size: 1Gi
#          deleteClaim: false
#  zookeeper:
#    replicas: 1
#    storage:
#      type: persistent-claim
#      size: 1Gi
#      deleteClaim: false
#  entityOperator:
#    topicOperator: {}
#    userOperator: {}
